tests/src/frontend/typechecking/invalid/try_annotation_readonly.sk
mutable base class Y() {
  fun parentFunc(): void {
    void
  }
}

mutable class X() extends Y {
  mutable fun childFunc(): void {
    this.parentFunc();
  }
}
